# adventofcode

./: .bazelrc  BUILD  MODULE.bazel
p1/: BUILD  solve.cpp  solve2.cpp
p10/: BUILD  solve.cpp  solve2.cpp
p11/: BUILD  solve.cpp  solve2.cpp
p12/: BUILD  solve.cpp  solve2.cpp
p13/: BUILD  solve.cpp  solve2.cpp
p14/: BUILD  solve.cpp  solve2.cpp
p15/: BUILD  solve.cpp  solve2.cpp
p16/: BUILD  solve.cpp  solve2.cpp
p17/: BUILD  solve.cpp  solve2.cpp
p18/: BUILD  solve.cpp  solve2.cpp
p19/: BUILD  solve.cpp  solve2.cpp
p2/: BUILD  solve.cpp  solve2.cpp  test.txt
p20/: BUILD  solve.cpp  solve2.cpp
p21/: BUILD  solve.cpp  solve2.cpp
p22/: BUILD  solve.cpp  solve2.cpp
p23/: BUILD  solve.cpp  solve2.cpp
p24/: BUILD  output.txt  solve.cpp  solve2.cpp  validator.py
p25/: BUILD  solve.cpp
p3/: BUILD  solve.cpp  solve2.cpp
p4/: BUILD  solve.cpp  solve2.cpp
p5/: BUILD  solve.cpp  solve2.cpp
p6/: BUILD  solve.cpp  solve2.cpp
p7/: BUILD  solve.cpp  solve2.cpp
p8/: BUILD  solve.cpp  solve2.cpp
p9/: BUILD  solve.cpp  solve2.cpp
support/: BUILD  conversions.hpp  filereader.hpp  nocopy.hpp  strprocessing.hpp
