###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################


bazel_dep(name = "rules_cc", version = "0.0.10")

cc_configure = use_extension("@rules_cc//cc:extensions.bzl", "cc_configure_extension")
use_repo(cc_configure, "local_config_cc")

bazel_dep(name = "platforms", version = "0.0.10")

register_execution_platforms(
    "//:mingw"
)

register_toolchains(
    "@local_config_cc//:cc-toolchain-x64_windows_mingw",
)
